...
                }
                
                ToolbarItem(placement: .cancellationAction) {
                    Button {
                        router.dismissSheet()
                    } label: {
                        Text("Close")
                    }
                }
            }
    }
}

...
